# gbemulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md
scripts/: codegen_tests.py
src/: CMakeLists.txt  Cpu.cpp  Cpu.h  CpuOperator.cpp  CpuOperator.h  CpuTranslator.cpp  CpuTranslator.h  MemoryBus.cpp  MemoryBus.h  OldCpu.cpp  OldCpu.h  Registers.cpp  Registers.h  cpu.cpp  cpu.h  cpu_instructions.cpp  formatters.h  main.cpp  registers.cpp  registers.h
src/sm83/: CMakeLists.txt  cpu.cpp  cpu_instructions.cpp  cpu_instructions.h
src/sm83/test/: CMakeLists.txt
src/test/: 00.cpp  01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  0a.cpp  0b.cpp  0c.cpp  0d.cpp  0e.cpp  0f.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  1a.cpp  1b.cpp  1c.cpp  1d.cpp  1e.cpp  1f.cpp  CMakeLists.txt  test.cpp
